# monitor-politico

./: README.md  delta.py  main.py  pyproject.toml
app/ingestion/IGTAO_API_DEPUTADOS/: igtao_api.py  igtao_api_deputados.py
app/ingestion/IGTAO_API_DEPUTADOS/config/: deputados.json  deputados_id.json
app/ingestion/IGTAO_API_DEPUTADOS/models/: model_deputados.py  model_deputados_id.py
app/ingestion/common/: APIClient.py  converter.py
data/deputados/PB/: API_DEPT_deputados_20250129_20250130_001051.json  deputados.json  deputados_pb.json  deputados_por_id.json
data/deputados/PB/delta/deputadostable/: part-00001-8d2fd8c8-fac3-4a0d-a279-d21706c7cf04-c000.snappy.parquet  part-00001-928fad1f-1b9f-4c53-98d2-552db2157b02-c000.snappy.parquet  part-00001-ac0c7fbc-c14c-4a66-bf6c-7f18880b9a42-c000.snappy.parquet  part-00001-f3c31742-0602-4f4d-8280-99d0e9e5dda3-c000.snappy.parquet
docs/: monitor-politico.excalidraw
workflows/ingestion/: IGTAO_API_DEPUTADOS.py
