[project]
name = "monitor-politico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "deltalake==0.21.0",
    "lancedb>=0.18.0",
    "pandas>=2.2.3",
    "pydantic[email]>=2.10.5",
    "pyspark>=3.5.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'uv run -m workflows.ingestion.IGTAO_API_DEPUTADOS'
